assert json is valid