@@ -1,6 +1,7 @@
 package org.schedoscope.export;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotEquals;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -15,6 +16,8 @@ import org.apache.hadoop.mrunit.mapreduce.MapReduceDriver;
 import org.apache.hadoop.mrunit.mapreduce.ReduceDriver;
 import org.apache.hadoop.mrunit.types.Pair;
 import org.apache.hive.hcatalog.data.HCatRecord;
+import org.json.JSONException;
+import org.json.JSONObject;
 import org.junit.Before;
 import org.junit.Test;
 import org.schedoscope.export.outputformat.JdbcOutputWritable;
@@ -46,7 +49,7 @@ public class JdbcExportJobMRTest extends HiveUnitBaseTest {
 	}
 
 	@Test
-	public void testJdbcMapper() throws IOException {
+	public void testJdbcMapper() throws IOException, JSONException {
 
 		Iterator<HCatRecord> it = hcatRecordReader.read();
 		while (it.hasNext()) {
@@ -56,9 +59,14 @@ public class JdbcExportJobMRTest extends HiveUnitBaseTest {
 		List<Pair<Text, NullWritable>> out = mapDriver.run();
 		assertEquals(10, out.size());
 
-		String result = out.get(0).toString().split("\t")[3];
-		System.err.println(out.get(0));
-		assertEquals("app.eci.datahub.OgmEventFeatures", result);
+		for (Pair<Text, NullWritable> p : out) {
+			String jsonData = p.getFirst().toString().split("\t")[1];
+			JSONObject json = new JSONObject(jsonData);
+			assertNotEquals(1, json.length());
+
+			String fixed = p.getFirst().toString().split("\t")[3];
+			assertEquals("app.eci.datahub.OgmEventFeatures", fixed);
+		}
 	}
 
 	@Test
